--- a/CorujaPresentation/CorujaPresentation.csproj
+++ b/CorujaPresentation/CorujaPresentation.csproj
@@ -231,7 +231,6 @@
     <Compile Include="Controllers\ContaController.cs" />
     <Compile Include="Controllers\ConteudoController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
-    <Compile Include="Controllers\ApplicationUsersController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
@@ -250,6 +249,10 @@
     <Compile Include="Migrations\201606151550152_3rd.cs" />
     <Compile Include="Migrations\201606151550152_3rd.Designer.cs">
       <DependentUpon>201606151550152_3rd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201608292136345_4th.cs" />
+    <Compile Include="Migrations\201608292136345_4th.Designer.cs">
+      <DependentUpon>201608292136345_4th.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -280,6 +283,7 @@
     <Content Include="Content\CorujaImages\500.png" />
     <Content Include="Content\CorujaImages\avatar2.png" />
     <Content Include="Content\CorujaImages\online.png" />
+    <Content Include="Content\CorujaImages\Renata.png" />
     <Content Include="Content\CorujaImages\Rodolfo.png" />
     <Content Include="Content\CorujaImages\Tomas.png" />
     <Content Include="Content\CorujaImages\Website-ombygning.png" />
@@ -408,6 +412,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606151550152_3rd.resx">
       <DependentUpon>201606151550152_3rd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608292136345_4th.resx">
+      <DependentUpon>201608292136345_4th.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
