--- a/CorujaPresentation/CorujaPresentation.csproj
+++ b/CorujaPresentation/CorujaPresentation.csproj
@@ -388,9 +388,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Conta\ShowMsg.cshtml" />
-    <Content Include="Views\Admin\RoleList.cshtml" />
-    <Content Include="Views\Admin\RoleDetails.cshtml" />
-    <Content Include="Views\Admin\CreateRole.cshtml" />
+    <Content Include="Views\Admin\Roles.cshtml" />
     <Content Include="Views\Admin\DefineUserRoles.cshtml" />
     <Content Include="Views\Conteudo\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
@@ -409,10 +407,10 @@
     <Content Include="Views\Home\Basics.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Error\InternalServer.cshtml" />
-    <Content Include="Views\Conta\MinhaConta.cshtml" />
+    <Content Include="Views\Conta\Dados.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
-    <Content Include="Views\Conta\Perfil.cshtml" />
     <Content Include="Views\Conta\AlterarSenha.cshtml" />
+    <Content Include="Views\Admin\ListOfUsers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201606091702093_1st.resx">
