--- a/CorujaPresentation/CorujaPresentation.csproj
+++ b/CorujaPresentation/CorujaPresentation.csproj
@@ -308,6 +308,7 @@
       <DependentUpon>201609272134492_11th.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Base.cs" />
     <Compile Include="Models\DataAccess.cs" />
     <Compile Include="DAL\Repositories\IRepository.cs" />
     <Compile Include="DAL\Repositories\Repository.cs" />
@@ -315,6 +316,7 @@
     <Compile Include="DAL\Service\IService.cs" />
     <Compile Include="DAL\UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="DAL\UnitOfWork\UnitOfWork.cs" />
+    <Compile Include="Models\Report.cs" />
     <Compile Include="Models\ReportKey.cs" />
     <Compile Include="Models\UserMapKey.cs" />
     <Compile Include="Models\UserFile.cs" />
@@ -526,6 +528,7 @@
     <Folder Include="Areas\CursosPalestras\Views\Shared\" />
     <Folder Include="Areas\Escola\Views\Shared\" />
     <Folder Include="Areas\Especialista\Views\Shared\" />
+    <Folder Include="Content\Files\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
