--- a/CorujaPresentation/CorujaPresentation.csproj
+++ b/CorujaPresentation/CorujaPresentation.csproj
@@ -260,13 +260,14 @@
     <Compile Include="Areas\Escola\Controllers\HomeEscolaController.cs" />
     <Compile Include="Areas\Escola\EscolaAreaRegistration.cs" />
     <Compile Include="Areas\Especialista\Controllers\AmbienteController.cs" />
-    <Compile Include="Areas\Especialista\Controllers\UserMapKeysController.cs" />
+    <Compile Include="Areas\Especialista\Controllers\EspecialistaApiController.cs" />
     <Compile Include="Areas\Especialista\EspecialistaAreaRegistration.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ContaController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Filter\ModelValidatorAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -302,7 +303,12 @@
     <Compile Include="Migrations\201609121326164_8th.Designer.cs">
       <DependentUpon>201609121326164_8th.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609272134492_11th.cs" />
+    <Compile Include="Migrations\201609272134492_11th.Designer.cs">
+      <DependentUpon>201609272134492_11th.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Base.cs" />
     <Compile Include="Models\DataAccess.cs" />
     <Compile Include="DAL\Repositories\IRepository.cs" />
     <Compile Include="DAL\Repositories\Repository.cs" />
@@ -310,8 +316,10 @@
     <Compile Include="DAL\Service\IService.cs" />
     <Compile Include="DAL\UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="DAL\UnitOfWork\UnitOfWork.cs" />
+    <Compile Include="Models\Report.cs" />
     <Compile Include="Models\ReportKey.cs" />
     <Compile Include="Models\UserMapKey.cs" />
+    <Compile Include="Models\UserFile.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="ViewModels\Validation\CpfAttribute.cs" />
@@ -406,7 +414,7 @@
     <Content Include="Areas\CorujaCrianca\Views\Slides\Index.cshtml" />
     <Content Include="Areas\CursosPalestras\Views\Cursos\Index.cshtml" />
     <Content Include="Areas\Escola\Views\HomeEscola\Index.cshtml" />
-    <Content Include="Areas\Especialista\Views\Ambiente\Home.cshtml" />
+    <Content Include="Areas\Especialista\Views\Ambiente\SobreEspecialista.cshtml" />
     <Content Include="Views\Shared\_LayoutEspecialista.cshtml" />
     <Content Include="Areas\Especialista\Views\Ambiente\Resultados.cshtml" />
     <Content Include="Areas\Especialista\Views\Ambiente\Relatorios.cshtml" />
@@ -506,6 +514,9 @@
     <EmbeddedResource Include="Migrations\201609121326164_8th.resx">
       <DependentUpon>201609121326164_8th.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609272134492_11th.resx">
+      <DependentUpon>201609272134492_11th.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -517,6 +528,7 @@
     <Folder Include="Areas\CursosPalestras\Views\Shared\" />
     <Folder Include="Areas\Escola\Views\Shared\" />
     <Folder Include="Areas\Especialista\Views\Shared\" />
+    <Folder Include="Content\Files\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
